--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,11 +52,6 @@ h2{
 	float: center;
 }
 
-main{
-	width:300px;
-	text-align: left;
-}
-
 section{
 		overflow: auto;
 		height: 100%;
@@ -73,7 +68,7 @@ margin{
 }
 
 article {
-		margin-left: 350px;
+		margin-left: 150px;
 		float: inline-end;
 }
 
@@ -84,7 +79,7 @@ div.gallery {
 }
 
 div.gallery:hover {
-  border: 1px solid #777;
+  border: 3px solid #FBEAEA;
   border-radius: 10px;
 }
 
@@ -106,4 +101,20 @@ div.content{
 img{
 	border-radius: 10px;
 	border: 3px solid #DBA399;
+	display: inline-block;
+}
+
+div.porfolio{
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	margin: 50px auto;
+}
+
+div.castle ul{
+	background-color: white;
+	align-items: center;
+	padding: 10px;
+	margin: 10px;
+	font-size: 20px;
 }
